--- a/sbb/src/main/resources/templates/signup_form.html
+++ b/sbb/src/main/resources/templates/signup_form.html
@@ -2,7 +2,7 @@
 	<div layout:fragment="content" class="container my-3">
 		<div class="my-3 border-bottom">
 			<div>
-				<h4>회원가입임</h4>
+				<h4>회원가입</h4>
 			</div>
 		</div>	
 		
