--- a/sbb/src/main/resources/templates/question_list.html
+++ b/sbb/src/main/resources/templates/question_list.html
@@ -4,13 +4,14 @@
 		
 		<table class="table">
 			<thead class="table-dark">
-				<tr>
+				<tr class="text-center">
 					<th>번호</th>
-					<th>제목</th>
+					<th style="width:50%">제목</th>
+					<th>글쓴이</th>
 					<th>작성일시</th>
 				</tr>
 			</thead>
-			<tbody>
+			<tbody class="text-center">
 				<tr th:each="question, loop : ${paging}">
 					<td th:text="${paging.getTotalElements 
 					- (paging.number * paging.size) - loop.index }"></td>
@@ -20,6 +21,12 @@
 						th:if="${#lists.size(question.answerList) > 0}"
 						th:text="${#lists.size(question.answerList)}"></span>
 					</td>
+					
+					<td>
+					<span th:if="${question.author != null}"
+					th:text="${question.author.username}"></span>
+					</td>
+					
 					<td th:text=" ${#temporals.format(question.createDate, 'yyyy-MM-dd  hh시 mm분')}"></td>
 				</tr>
 			</tbody>
