--- a/sbb/src/main/resources/templates/question_detail.html
+++ b/sbb/src/main/resources/templates/question_detail.html
@@ -18,6 +18,27 @@
 					</div>
 				</div>
 				
+				<div class="my-3">
+				
+					<a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm btn-outline-secondary"
+					   sec:authorize="isAuthenticated()"
+					   th:if="${question.author != null and #authentication.name == question.author.username}"
+					   th:text="수정">
+					</a>
+					
+					<a href="javascript:void(0);"
+					   th:data-uri="@{|/question/delete/${question.id}|}"
+					   class="delete btn btn-sm btn-outline-secondary"
+					   sec:authorize="isAuthenticated()"
+					   th:if="${question.author != null and #authentication.name == question.author.username}"	
+					   th:text="삭제">
+				    </a>
+					
+				</div>
+				<!-- #authentication.getPrincipal().getUsername() == #authentication.name -->
+				<!-- sec:authorize 와 th:if 합치는 법 -->
+				<!-- sec:authorize="isAuthenticated and principal.username == #vars.question.author.username -->
+				
 			</div>
 		</div>
 		
@@ -38,6 +59,10 @@
 						<div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd')}"></div>
 					</div>
 				</div>
+				
+				
+			
+				
 			</div>
 		</div>
 		
@@ -56,4 +81,17 @@
 		
 		</div>
 	</div>
+	
+	<script type="text/javascript" layout:fragment="script">
+		const delete_elements = document.getElementsByClassName("delete");
+		Array.from(delete_elements).forEach(function(element){
+			element.addEventListener('click', function(){
+				if(confirm("정말로 삭제하시겠습니까?")){
+					location.href = this.dataset.uri;
+				};
+			});
+		});
+	</script>
+	
+	
 </html>
