--- a/sbb/src/main/resources/templates/question_form.html
+++ b/sbb/src/main/resources/templates/question_form.html
@@ -5,7 +5,8 @@
 			
 			<!-- method="post"는 postMapping로 받겠다는 소리. -->
 			<!-- object 를 지정해줘야 객체로 불러올 수 있다. -->
-			<form th:action="@{/question/create}" th:object="${questionForm}" method="post">
+			<form th:object="${questionForm}" method="post">
+			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 			
 				<div th:replace="~{form_errors :: formErrorsFragment}"></div>
 			
