--- a/sbb/src/main/resources/templates/question_detail.html
+++ b/sbb/src/main/resources/templates/question_detail.html
@@ -48,7 +48,7 @@
 		<!-- 답변 목록 반복 시작 -->
 		<div class="card my-3" th:each=" answer : ${question.answerList} ">
 			<div class="card-body">
-				<div class="card-text" style="white-space:pre-line;" th:text="${answer.content}"></div>
+				<div class="answer-text card-text" style="white-space:pre-line;" th:text="${answer.content}"></div>
 				
 				<div class="d-flex justify-content-end">
 					<div class="badge bg-light text-dark p-2 text-start">
@@ -60,7 +60,27 @@
 					</div>
 				</div>
 				
+				<!-- 답변 수정 버튼 관련 시작?  -->
 				
+				<a th:href="@{|/answer/modify/${answer.id}|}" class="modify btn btn-sm btn-outline-secondary"
+					   sec:authorize="isAuthenticated()"
+					   th:if="${answer.author != null and #authentication.name == answer.author.username}"
+					   th:text="수정">
+				</a>
+				
+				<!-- 답변 수정 버튼 관련 끝? -->
+				
+				<!-- 답변 삭제 버튼 시작? -->
+				
+				<a href="javascript:void(0);"
+					   th:data-uri="@{|/answer/delete/${answer.id}|}"
+					   class="delete btn btn-sm btn-outline-secondary"
+					   sec:authorize="isAuthenticated()"
+					   th:if="${answer.author != null and #authentication.name == answer.author.username}"	
+					   th:text="삭제">
+			    </a>
+			    
+			    <!-- 답변 삭제 버튼 끝? -->
 			
 				
 			</div>
@@ -91,6 +111,9 @@
 				};
 			});
 		});
+		
+
+		
 	</script>
 	
 	
