--- a/sbb/src/main/resources/templates/answer_form.html
+++ b/sbb/src/main/resources/templates/answer_form.html
@@ -11,7 +11,7 @@
 				
 				<div class="mb-3">
 					<label for="content" class="form-label">내용</label>
-					<textarea rows="10" th:field="*{content}" name="content" id="content" class="form-control"></textarea>
+					<textarea rows="10" th:field="*{content}" class="form-control"></textarea>
 				</div>
 				
 				<input type="submit" value="저장하기" class="btn btn-primary my-2">
