--- a/sbb/src/main/resources/templates/question_detail.html
+++ b/sbb/src/main/resources/templates/question_detail.html
@@ -69,8 +69,12 @@
 			<div class="card-body">
 				<div class="answer-text card-text" style="white-space:pre-line;" th:text="${answer.content}"></div>
 				
+				
+				
 				<div class="d-flex justify-content-end">
 				<!-- 답변 수정 시간 -->
+				
+				
 					
 					<div th:if="${answer.modifyDate != null}" class ="badge bg-light text-dark p-2 text-start mx-3">
 						<div class="mb-2">수정 시간</div>
@@ -91,6 +95,16 @@
 						<div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd')}"></div>
 					</div>
 				</div>
+				
+				<!-- 답변 추천 시작 -->
+				
+				<a href="javascript:void(0);"
+				th:data-uri="@{|/answer/vote/${answer.id}|}"
+				class="recommend btn btn-sm btn-outline-secondary">추천
+					<span class="badge rounded-pill bg-success" th:text="${#lists.size(answer.voter)}"></span>
+				</a>
+				
+				<!-- 답변 추천 끝 -->
 				
 				<!-- 답변 수정 버튼 관련 시작?  -->
 				
